--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -6,9 +6,12 @@
   {{ style('style') }}
 </head>
 <body>
+    
   <div class="my-5"></div>
   <section>
     <h1>One Time Secret</h1>
+    <br>
+    <p>Check out my other tool, a simple/free <a href="/s">Link Shortener</a></p>
     <div class="my-5"></div>
     @inlineSvg('undraw_share_link_qtxe')
     <div class="my-5"></div>
