Fixed destructing link form

--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -24,7 +24,7 @@
       </p>
       <div class="my-5"></div>
 
-        <form method="POST" action="secret">
+        <form method="POST" action="/l">
           {{ csrfField() }}
           <textarea class="form-control" name="secret" placeholder="Enter your secret here..."></textarea>
           <br/>
