--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,6 @@ body {
   font-weight: 300;
   background-color: #45aaf2;
   color: white;
-  background-color: #45aaf2;
 }
 p {
   color: white;
@@ -132,4 +131,11 @@ input, textarea {
   border-radius: 10px;
   border: 0px;
   width: 325px;
+}
+
+.bg-red {
+  background-color: #e74c3c;
+}
+.bg-green {
+  background-color: #2ecc71;
 }
